WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315505
REGRESSION: 'displayLinkWithTarget:selector:' is deprecated - Use the equivalent display link API on UIWindowScene
https://bugs.webkit.org/show_bug.cgi?id=315505
Summary
REGRESSION: 'displayLinkWithTarget:selector:' is deprecated - Use the equival...
Jonathan Bedard
Reported
2026-05-25 06:47:23 PDT
displayLinkWithTarget has been deprecated on UIScreen.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2026-05-25 06:47:24 PDT
<
rdar://problem/177874054
>
Jonathan Bedard
Comment 2
2026-05-25 06:48:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65616
Jonathan Bedard
Comment 3
2026-05-25 20:52:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65649
EWS
Comment 4
2026-05-25 20:57:23 PDT
Committed
313865@main
(6417b6d3f43a): <
https://commits.webkit.org/313865@main
> Reviewed commits have been landed. Closing PR #65649 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug