REGRESSION: 'displayLinkWithTarget:selector:' is deprecated - Use the equivalent display link API on UIWindowScene https://bugs.webkit.org/show_bug.cgi?id=315505 rdar://177874054

Unreviewed build fix.

* Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeDrawingAreaProxyIOS.mm:
(-[WKDisplayLinkHandler _createDisplayLink]):

Canonical link: https://commits.webkit.org/313865@main